force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Business_Process_Interaction__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Business_Process_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this field with the Business Process Interaction record to which this business activity execution is associated. By default, it is blank.</description>
    <inlineHelpText>This automatically populated field displays the Business Process Interaction record to which this business activity is associated.</inlineHelpText>
    <label>Business Process Interaction</label>
    <referenceTo>nFORCE__Business_Process_Interaction__c</referenceTo>
    <relationshipLabel>Business Process Interactions</relationshipLabel>
    <relationshipName>Linked_Business_Process_Interaction</relationshipName>
    <type>Lookup</type>
</CustomField>