force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Config_Template_Is_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Config_Template_Is_Dynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional field to indicate whether the business process was previously stored. By default, it is false.</description>
    <inlineHelpText>This automatically populated field displays whether the business process was previously stored.</inlineHelpText>
    <label>Business Process Is Dynamic</label>
    <type>Checkbox</type>
</CustomField>