force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Is_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional field to indicate if this business activity execution is scheduled for future processing. By default, it is false.</description>
    <inlineHelpText>This automatically populated field displays whether this business activity execution is scheduled for future processing.</inlineHelpText>
    <label>Is Scheduled</label>
    <type>Checkbox</type>
</CustomField>