force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Is_Scheduled_Single_Run__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Scheduled_Single_Run__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The system automatically populates this optional field to indicate if this Business Activity execution, if scheduled, executes once or is recurring. By default, it is true.</description>
    <inlineHelpText>This automatically populated field displays whether a Business Activity execution, if scheduled, executes once or is recurring.</inlineHelpText>
    <label>Is Scheduled Single Run Only</label>
    <type>Checkbox</type>
</CustomField>